website/versioned_docs/version-2.3.x/cli/reference/refresh.md
---
title: "refresh"
sidebar_label: "refresh"
pagination_prev: null
pagination_next: null
---

Refreshes an accelerated dataset loaded by the Spice runtime

### Usage

```shell
spice refresh [dataset] [flags]
```

`dataset` - an accelerated dataset name

#### Flags

- `--tls-root-certificate-file`   The path to the root certificate file used to verify the Spice.ai runtime server certificate
- `--refresh-sql`  SQL used to refresh the dataset, see [Refresh SQL docs](../../features/data-acceleration/data-refresh#refresh-sql).
- `--refresh-mode`  Refresh mode to use, see [Refresh Modes docs](../../features/data-acceleration/data-refresh#refresh-modes).
- `--refresh-jitter-max`  Maximum [jitter](../../features/data-acceleration/data-refresh#refresh-jitter) applied to the refresh, as a [duration](../../reference/duration) (e.g. `1m`).
- `-o`, `--output <format>` Output format: `table` (default) or `json`.
- `-h`, `--help`   Print this help message

### Examples

```shell
>>> spice refresh taxi_trips --refresh-sql "SELECT * FROM taxi_trips WHERE trip_amount > 10.0"
```

Refreshing dataset taxi_trips ...
Dataset refresh triggered for taxi_trips.

### Additional Example

```shell
>>> spice refresh taxi_trips --refresh-mode append
```

Refreshing dataset taxi_trips with append mode...
Dataset refresh triggered for taxi_trips.
```
